Agrego trabajo en las funciones auxiliares para el ejemplo

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -445,11 +445,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_4776\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar add\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_6088\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar add\n",
       "  suma = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_4776\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_6088\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar multiply\n",
       "  suma = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_4776\\2863069600.py:35: UserWarning: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger.\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_6088\\2863069600.py:35: UserWarning: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger.\n",
       "  warnings.warn(f\"Advertencia: se alcanzó el tope de {tope_iteraciones} iteraciones sin converger.\")\n"
      ]
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "57cc9a9c-26e4-46af-802b-e24f5d804aa1",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "9782921e-6dd8-4d75-94fb-d3231c2a7a8d",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "array([ 3.33333333, 13.33333333, 23.33333333])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "e7ac4e89-692d-48ed-b639-c412429a9ab3",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "array([ 3.33333333, 13.33333333, 23.33333333])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,8 +713,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0cd77cf6-da70-4c56-b75f-93458ebf47f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Ver si lo podemos implementar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea213aae-7b2b-4da6-bd39-e3cc19b1fd64",
+   "metadata": {},
+   "source": [
+    "# Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b44ab62-1ce5-4520-b4b2-474e519e1659",
+   "metadata": {},
+   "source": [
+    "Vamos a aplicar estos métodos al problema de una imagen desenfocada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d6fc84-546c-42b9-b9ba-98740fef5951",
    "metadata": {},
    "outputs": [],
    "source": []
