Agrego GMRES hasta determinada iteración

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -220,7 +220,9 @@
   {
    "cell_type": "markdown",
    "id": "1763feff-ca02-4401-9611-abc502195974",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Método de Jacobi"
    ]
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "9fd3688c-c85f-4e4d-bbc1-7a4ecc10abd9",
    "metadata": {},
    "outputs": [],
@@ -443,11 +445,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_16724\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar add\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_15412\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar add\n",
       "  suma = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_16724\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_15412\\2863069600.py:22: RuntimeWarning: overflow encountered in scalar multiply\n",
       "  suma = sum(A[i][j] * x[j] for j in range(n) if j != i)\n",
-      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_16724\\2863069600.py:35: UserWarning: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger.\n",
+      "C:\\Users\\Fausto\\AppData\\Local\\Temp\\ipykernel_15412\\2863069600.py:35: UserWarning: Advertencia: se alcanzó el tope de 1000 iteraciones sin converger.\n",
       "  warnings.warn(f\"Advertencia: se alcanzó el tope de {tope_iteraciones} iteraciones sin converger.\")\n"
      ]
     }
@@ -1131,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "id": "8f8c2a6b-77ea-4578-bfcb-3da1e3c0b348",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "id": "9aaab177-9808-48f3-9155-e431d7f7d34c",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1195,7 @@
    "id": "175c332f-4889-43b5-a739-3d660a61c1c1",
    "metadata": {},
    "source": [
-    "Podemos observar que la performance del método directo es, entonces, paupérrima, lo cual nos lleva de cabeza al intento de regularización."
+    "Podemos observar que la performance del método directo es, entonces, paupérrima, lo cual nos lleva a pensar maenras de solucionar este problema."
    ]
   },
   {
@@ -1201,28 +1203,26 @@
    "id": "5aa721af-d268-4478-adbf-5790cf0b3007",
    "metadata": {},
    "source": [
-    "### Regularización de Tikhonov"
+    "### Controlar las iteraciones de GMRES"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a211ca25-5c77-4a10-b8e2-3604521509ee",
+   "id": "a72e188f-712a-4271-8221-f019322fa16f",
    "metadata": {},
    "source": [
-    "Utilizaremos en nuestro enfoque la regularización de Tikhonov, que proviene de resolver el problema de optimización dado por\n",
-    "\n",
-    "$$ \\min_x \\|Ax-b\\|_2^2 + \\lambda \\|x\\|_2^2 $$\n",
-    "\n",
-    "donde $\\lambda$ es un hiperparámetro que debemos decidir."
+    "Un enfoque con el que se puede tratar el problema del mal condicionamiento es utilizar un método iterativo, como puede ser GMRES, parándolo antes de que el ruido contamine a la solución."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de17a4c3-8b52-497a-99f9-530a2d4eed68",
+   "id": "050552ec-0b4b-41ff-864c-2ac69ab248e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Pendiente: no me salió nada AYUDA"
+   ]
   }
  ],
  "metadata": {
