Agrego mini descripcion de GMRES

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -706,19 +706,43 @@
   {
    "cell_type": "markdown",
    "id": "df1b1594-77ca-4893-ad5d-7a24a79b22cd",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Método de Residuo Generalizado Mínimo (GMRES)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0cd77cf6-da70-4c56-b75f-93458ebf47f7",
+   "cell_type": "markdown",
+   "id": "a559d955-28ab-4a57-9fdd-1e28b3465c25",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Ver si lo podemos implementar"
+    "Para resolver el problema $$\\mathbf{Ax=b}\\,,$$ definimos como $$\\mathcal{K}_m = \\mathcal{K}_m(\\mathbf{A,b}) = \\langle \\mathbf{b, Ab, A^2 b, \\dots, A^{m-1}b} \\rangle$$ al subespacio de Krylov de $\\mathbf A$ y $\\mathbf b$ de dimensión $m$,\n",
+    "\n",
+    "La idea del método GMRES nos dice que, dados $\\mathbf{x_n} \\in \\mathcal{K}_n$ calculemos los residuos $\\mathbf{r_n = b - Ax_n}$ e intentemos minimizarlos. Dado que $\\mathbf{x_n} \\in \\mathcal{K}_n$, podemos definir la \"matriz de Krylov\"\n",
+    "\n",
+    "$$\\mathbf{K_n = \\begin{pmatrix}|& |& | & | \\\\b & A^2 b & \\dots & A^{n-1} b \\\\ |&|&|&|\\end{pmatrix}}$$\n",
+    "\n",
+    "y notar que entonces $\\mathbf{x_n = K_n c}$ para algunos coeficientes $\\mathbf{c}$ adecuados, y lo que queremos es escoger un $\\mathbf c$ que minimice los residuos. Dicho de otra manera, queremos en cada paso\n",
+    "\n",
+    "$$\\mathbf{\\min_{c} \\|Ax_n - b\\|}=\\mathbf{\\min_{c} \\|AK_n c - b\\|}\\,.$$\n",
+    "\n",
+    "El problema, lógicamente, viene en que las columnas de $\\mathbf{K_n}$ no son ortonormales, por lo que trabajar con ellas puede ser un problema. En lugar de eso, buscamos $$\\mathbf{K_n = Q_n R_n}\\,,$$ una descomposición QR, donde $\\mathbf{Q_n}$ sea ortogonal, de modo de usar esos vectores que si son ortonormales para nuestra conveniencia. Esto es porque podemos decir $$\\mathbf{x_n = K_n c = Q_n H_n c = Q_n y}\\,,$$ y trabajar con los coeficientes $\\mathbf y$ en lugar de los $\\mathbf c$, aprovechando la ortonormalidad.\n",
+    "\n",
+    "Resulta entonces que el problema ahora es\n",
+    "\n",
+    "$$\\mathbf{\\min_{y} \\|AQ_n y - b\\|}$$\n",
+    "\n",
+    "También sabemos que, gracias al método de Arnoldi, podemos expresar a $\\mathbf{AQ_n}$ como $\\mathbf{Q_{n+1} \\tilde{H}_n}$, donde $\\mathbf{\\tilde{H}_n}$ es una matriz de Hessenberg, resultando entonces el problema en\n",
+    "\n",
+    "$$\\mathbf{\\min_{y} \\|Q_{n+1} \\tilde{H}_n y - b\\|} = \\mathbf{\\min_{y} \\|\\tilde{H}_n y - Q_{n+1}^{T}b\\|}$$\n",
+    "\n",
+    "Y la observación final es que como se puede computar que $\\mathbf{Q_{n+1}^{T}b = \\|b\\|e_1}$, resulta:\n",
+    "\n",
+    "$$ \\mathbf{\\min_{y} \\|\\tilde{H}_n y - \\|b\\|e_1\\|}$$\n",
+    "\n",
+    "Lo cual podemos resolver con cualquier técnica de mínimos cuadrados. Para terminar la idea del algoritmo, cuando $\\mathbf{\\|r_n\\|}$, sea menor a una tolerancia que impongamos, podemos terminar las iteraciones. "
    ]
   },
   {
